peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/EF_Approved_Offers__c.object-meta.xml
<CustomObject>
    <label>EF Approved Offers</label>
    <nameField>
        <displayFormat>Offer-{0}</displayFormat>
        <label>EF Approved Offers ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EF Approved Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>