peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Actual_Term__c.field-meta.xml
<CustomField>
    <fullName>Actual_Term__c</fullName>
    <description>Formula field, adds Term+Deferral Payments.Not editable</description>
    <formula>Deferral_Payments_View__c + Term_in_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>