peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Additanal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additanal_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>