peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Advanced_Rental__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Rental__c</fullName>
    <label>Advanced Rental</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Payment</fullName>
            </value>
            <value>
                <fullName>First &amp; Last Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>