peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Advanced_Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Rental_Amount__c</fullName>
    <label>Advanced Rental Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>