peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Credit_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Grade__c</fullName>
    <formula>TEXT(Opportunity__r.Credit_Risk_Grade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Risk Grade</label>
    <type>Text</type>
</CustomField>