peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Deferral_Payments__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Payments__c</fullName>
    <description>Formula field from Opportunity.Deferral_Payments</description>
    <formula>Opportunity__r.Deferral_Periods__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Deferral Payments*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>