peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Deferral_Payments_Custom__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Payments_Custom__c</fullName>
    <description>Editable field copied from Opportunity for Custom Offer</description>
    <label># Deferral Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>