peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Deferral_Payments_View__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Payments_View__c</fullName>
    <formula>IF(
RecordType.Name = &apos;Custom&apos;
, Deferral_Payments_Custom__c 
, Deferral_Payments__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Deferral Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>