peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Desired_Yield__c.field-meta.xml
<CustomField>
    <fullName>Desired_Yield__c</fullName>
    <description>Only used on custom offer, hidden on system offer</description>
    <label>Desired Yield</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>