peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Is_Selected_Offer__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select</label>
    <type>Checkbox</type>
</CustomField>