peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Max_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Max_Equipment_Cost__c</fullName>
    <label>Max, Equipment Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>