peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Min_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Min_Equipment_Cost__c</fullName>
    <label>Min. Equipment Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>