peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <formula>Rate_Factor__c * ((Equipment_Cost__c *(1 + (Points__c / 100))) - Advanced_Rental_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>