peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Offer_Selected__c.field-meta.xml
<CustomField>
    <fullName>Offer_Selected__c</fullName>
    <label>Selected Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Pending Exception Approval</fullName>
            </value>
            <value>
                <fullName>Exception Approved</fullName>
                <label>Exception Approved (Selected)</label>
            </value>
            <value>
                <fullName>Exception Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>