peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Formula from Opportunity.Points__c. For use with system generated offers.</description>
    <formula>Opportunity__r.Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>