peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Points_Custom__c.field-meta.xml
<CustomField>
    <fullName>Points_Custom__c</fullName>
    <description>Editable field copied from Opportunity for custom Offer.</description>
    <label>Points</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>