peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Points_View__c.field-meta.xml
<CustomField>
    <fullName>Points_View__c</fullName>
    <formula>IF(
 RecordType.Name = &apos;Custom&apos;
 , Points_Custom__c
 , Points__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>