peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Rate_Factor__c.field-meta.xml
<CustomField>
    <fullName>Rate_Factor__c</fullName>
    <label>Rate Factor</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>