peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Type</label>
    <length>220</length>
    <type>Text</type>
</CustomField>