peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Residual__c.field-meta.xml
<CustomField>
    <fullName>Residual__c</fullName>
    <label>Residual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>