peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <label>Security Deposit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>