peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_in_Months__c</fullName>
    <label>Term (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>