peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <description>Populates from matching rate card for system generated offers, not editable. Needs to interpolate as needed for non-aligned Terms.</description>
    <label>Yield</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>