peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/recordTypes/Custom.recordType-meta.xml
<RecordType>
    <fullName>Custom</fullName>
    <active>true</active>
    <description>User created custom offer</description>
    <label>Custom</label>
</RecordType>