peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/recordTypes/System.recordType-meta.xml
<RecordType>
    <fullName>System</fullName>
    <active>true</active>
    <description>System Generated Offer</description>
    <label>System</label>
</RecordType>