peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/validationRules/Advanced_Rental_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Advanced_Rental_Amount_Required</fullName>
    <active>true</active>
    <description>If Advance Rental is selected, Advance Rental Amount is required</description>
    <errorConditionFormula>(ISBLANK(Advanced_Rental_Amount__c) || Advanced_Rental_Amount__c=0 )
&amp;&amp;	NOT(ISBLANK(TEXT(Advanced_Rental__c )))</errorConditionFormula>
    <errorDisplayField>Advanced_Rental_Amount__c</errorDisplayField>
    <errorMessage>Advanced Rental Amount is required when advanced rental is selected</errorMessage>
</ValidationRule>