peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/validationRules/Cant_Edit_Or_Create_if_Deal_is_not_in_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Edit_Or_Create_if_Deal_is_not_in_3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(Opportunity__r.Loan_Record_Type__c), NOT(ISPICKVAL(Opportunity__r.StageName,&apos;Proposal&apos;)))</errorConditionFormula>
    <errorMessage>Move app to Proposal Stage before modifying the Offer</errorMessage>
</ValidationRule>