peac_dev/force-app/main/default/objects/EF_Approved_Offers__c/validationRules/Custom_Term_vs_Opp_Ma_Approved_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Term_vs_Opp_Ma_Approved_Term</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
	RecordType.Name = &apos;Custom&apos;,
	OR(
	Term_in_Months__c &gt;  Opportunity__r.Max_Term_Approved__c
	)
)</errorConditionFormula>
    <errorMessage>Term on custom EF Approved Offers can&apos;t exceed Opportunity Max Approved Term</errorMessage>
</ValidationRule>